--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,8 @@
     <string name="open_cash_drawer">Open Cash Drawer : </string>
     <string name="disconnect_after_print">Disconnect After Print : </string>
     <string name="auto_cut_after_print">Auto-Cut After Printing : </string>
-
+    <string name="enable_cash_balance">Enable Cash Balance </string>
+    <string name="block_out_of_stock">Block Out Of Stock Sale : </string>
     <!-- Default Printer Section -->
     <string name="default_printer">Default Printer</string>
     <string name="change">Change</string>
