POS settings and packaging options completed

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,9 +22,10 @@
     <string name="settings_item_1">Invoice Settings</string>
     <string name="settings_item_2">Tax Settings</string>
     <string name="settings_item_3">POS Settings</string>
-    <string name="settings_item_4">Printer Setup</string>
-    <string name="settings_item_5">Theme</string>
-    <string name="settings_item_6">Reset</string>
+    <string name="settings_item_4">Bill Settings</string>
+    <string name="settings_item_5">Printer Setup</string>
+    <string name="settings_item_6">Theme</string>
+    <string name="settings_item_7">Reset</string>
     <string name="title_activity_login">LoginActivity</string>
     <string name="prompt_email">Email</string>
     <string name="prompt_password">Password</string>
